--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- <meta name="theme-color" content="#000000"> -->
-  <title>React Restarter</title>
+  <title>Peanut Counter</title>
   <!-- below line won't work, and unnecessary if .css loader is configured in webpack -->
   <!-- <link rel="stylesheet" type="text/css" href="style.css"> -->
 </head>
